compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__use___use_with_function_that_doesnt_take_callback_as_last_arg_2.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\nlet f = fn() { 1 }\nuse <- f\n123\n"
---
----- SOURCE CODE

let f = fn() { 1 }
use <- f
123


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:3:8
  │
3 │ use <- f
  │        ^ Expected no arguments, got 1

The function on the right of `<-` here takes no arguments, but it has to
take at least one argument, a callback function.

See: https://tour.gleam.run/advanced-features/use/
